--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
 <body>
     <div class="contenedor">
         <div class="caja-madre">
+            <div class="titulo">
+                <h2>Aqui puedes calcular las tablas de multiplicar</h2>
+            </div>
+            <div class="formulario">
+                <div class="formulario-hijo">
+                    <label for="txtNumeroTabla" class="label-tablas">¿Hasta que tabla quieres?</label>
+                    <input type="number" name="txtNumeroTabla" id="txtNumeroTabla" class="caja-numero">
+                    <button type="button" class="button-tablas">Mirar Tablas</button>
+                </div>
+            </div>
             <div class="caja-hija"></div>
         </div>
     </div>
